--- a/oops_trap/index.html
+++ b/oops_trap/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg" href="/src/assets/icons/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oops Trap Game - VK Mini App</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
